Tue May 01 14:41:03 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.c: instead of a define, read a
	  DOING_GDMCONFIG_DEVELOPMENT env var.

	* gui/gdmconfig.c, gui/gdmlogin.c: ignore sessions ending in .deleted
	  and .desc

	* gui/gdmconfig.c, gui/gdmlogin.c:  Session names ARE case sensitive
	  so remove all this case insensitivity crap that could seriously mess
	  things up.  The only case insensitive thing is that the default
	  link can be case insensitive, the actual files are sensitive.

	* gui/gdmconfig.(c|h|glade): fix an assload of stuff with respect to
	  the Session directory editting.  Not all tested though, so still
	  use at your own risk.  Though it theoretically has less problems
	  now.  Also cleaned up stuff a tiny bit.  This file could use a run
	  trhough indent.

Mon Apr 30 17:27:11 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: fix a couple of possible crashes with invalid images
	  being set.  Limit the logo size by just cropping the widget, that
	  way user will still be able to log in if he screws up the config

	* configure.in, config/gdm.conf.in:  Use the sbin path if using
	  console helper for the Configurator setting, else it won't work
	  right

Mon Apr 30 16:48:42 2001  George Lebl <jirka@5z.com>

	* gdm/gdm.[ch], gdm/verify-(pam|crypt|shadow).c,
	  gui/gdmconfig.(c|glade):  Add an option to toggle logging in
	  of root remotely.  So one can allow local root login but disallow
	  remote root logins.

	* daemon/slave.c:  add nicer error messages to all the exec failiures

Mon Apr 30 02:34:37 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, deamon/gdm.[ch], daemon/slave.c,
	  gui/gdmconfig.(c|glade):  Split up the max sizes into normal
	  and another one for session files for which the limit is much
	  higher.  This is because session files are never read into memory,
	  but rather just scanned.

	* daemon/gdm.c, daemon/slave.c:  When no session is set browse