@@ -1,3 +1,11 @@
+Tue May 01 16:28:17 2001  George Lebl <jirka@5z.com>
+
+	* daemon/gdm.c, daemon/gdm.h, daemon/slave.c, gui/gdmconfig.c,
+	  gui/gdmlogin.c:  Make it possible to log in even if the sessions
+	  directory is missing or empty.  Of course if that happens the
+	  user gets a "you're an idiot and your setup's b0rk" warning dialog
+	  (well not in those exact words)
+
 Tue May 01 14:41:03 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmconfig.c: instead of a define, read a
